<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.stalexman.fsviewer.SettingsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20dp"
        android:id="@+id/textView" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_height"
            android:onClick="onChangePath"
            android:clickable="true"

            >
            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/folder"
                android:textSize="@dimen/text_size"
                />

            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/path"
                android:text="/"
                android:textSize="@dimen/text_size"
                />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_height"
            android:onClick="onSetPause"
            android:clickable="true"
            >
            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_span="2"
                android:text="@string/pause"
                android:textSize="@dimen/text_size"
                />

            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/pause"
                android:text="3"
                android:textSize="@dimen/text_size"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_height" >
            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/start"
                android:textSize="@dimen/text_size"
                />
            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="00:00"
                android:clickable="true"
                android:id="@+id/start"
                android:onClick="onSetStart"
                android:textSize="@dimen/text_size"
                />
            <CheckBox
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/on_checkbox"
                android:textSize="@dimen/text_size"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_height" >


            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/stop"
                android:textSize="@dimen/text_size"
                />

            <TextView
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="00:00"
                android:id="@+id/stop"
                android:clickable="true"
                android:onClick="onSetStop"
                android:textSize="@dimen/text_size"
                />

            <CheckBox
                android:layout_height="@dimen/settings_height"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/off_checkbox"
                android:textSize="@dimen/text_size"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/cancel"
        android:onClick="onCancel"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/save_button"
        android:layout_toRightOf="@+id/save_button"
        android:layout_toEndOf="@+id/save_button"
        android:id="@+id/cancel_button" />

    <Button
        android:text="@string/save"
        android:onClick="onSaveSettings"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>